<resources>
    <string name="app_name">agendamento-fiap</string>
    <string name="title">Agendamento de Salas - FIAP</string>
    <string name="label_matricula">Matricula</string>
    <string name="label_senha">Senha</string>
    <string name="button_signon">Entrar</string>
    <string name="button_register">Cadastrar</string>
    <string name="label_desc_register">Ainda não tem acesso?</string>
    <string name="label_register_user">Cadastrar</string>
    <string name="label_button_agd">Agendamento de sala</string>
    <string name="label_button_mat">Agendamento de material</string>
    <string name="title_request_room">Solicitando sala</string>
    <string name="title_request_material">Solicitando material</string>
    <string name="title_list_request_material">Listando materiais solicitados</string>
    <string name="title_list_request_room">Listando solicitações de sala</string>
    <string name="label_button_list_room">Consultar agendamentos de sala</string>
    <string name="label_button_list_material">Consultar materiais solicitados</string>
    <string name="label_list_users">Listar usuários</string>
    <string name="title_list_users">Usuários cadastrados</string>
    <string name="label_room_professor">Professor</string>
    <string name="label_room_sala">Sala</string>
    <string name="label_room_date">Escolha a data</string>
    <string name="label_room_date_1">Data</string>
    <string name="label_room_date_2">Data a ser selecionada</string>
    <string name="label_room_periodo">Periodo</string>
    <string name="label_room_tipo">Cliente/Parceiro?</string>
    <string name="label_qnt_alunos">Quantidade de alunos</string>
    <string name="btn_label_request_room">Solicitar</string>
    <string name="label_material_material">Material</string>
    <string name="rv_id">Id</string>
    <string name="rv_professor">Professor</string>
    <string name="user_example">Humberto Delgado</string>
    <string name="rv_sala">Sala</string>
    <string name="sala_example">201</string>
    <string name="rv_data">Data</string>
    <string name="data_example">20/01/2019</string>
    <string name="rv_periodo">Periodo</string>
    <string name="periodo_example">Manha</string>
    <string name="rv_tipo">Tipo</string>
    <string name="tipo_example">Cliente</string>
    <string name="rv_quantidade">Quantidade de alunos</string>
    <string name="quantidade_example">20</string>
    <string name="rv_material">Material</string>
    <string name="material_example">Projetor</string>
    <string name="question_delete">Deseja remover esta solicitação?</string>
    <string name="label_logoff">Desconectar</string>

    <string-array name="professor_array">
        <item>Allen</item>
        <item>Humberto</item>
        <item>Camila</item>
        <item>Helder</item>
        <item>Cabral</item>
        <item>Gabriela</item>
        <item>Lucas</item>
        <item>Torrente</item>
        <item>Ezequiel</item>
        <item>Agessandro</item>
    </string-array>

    <string-array name="materiais_array">
        <item>Projetor</item>
        <item>Computador - Desktop</item>
        <item>Notebook</item>
        <item>Microfone</item>
        <item>Caixa de Som</item>
        <item>Iluminacao Especial</item>
        <item>Canetas para Quadro</item>
        <item>Flip Chart</item>
    </string-array>

    <string-array name="parcCli_array">
        <item>Aula Normal</item>
        <item>Cliente</item>
        <item>Parceiro</item>
        <item>Visita Externa</item>
    </string-array>

    <string-array name="salas_array">
        <item>201</item>
        <item>202</item>
        <item>203</item>
        <item>204</item>
        <item>301</item>
        <item>302</item>
        <item>303</item>
        <item>304</item>
        <item>401</item>
        <item>402</item>
        <item>403</item>
        <item>404</item>
        <item>501</item>
        <item>502</item>
        <item>503</item>
        <item>504</item>
        <item>601</item>
        <item>602</item>
        <item>603</item>
        <item>604</item>
    </string-array>

    <string-array name="periodos_array">
        <item>Manha</item>
        <item>Tarde</item>
        <item>Noite</item>
    </string-array>

</resources>
