<LinearLayout android:layout_height="match_parent" android:layout_width="match_parent" android:orientation="vertical" android:background="#ed145b"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_request_room"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:padding="10sp"
        android:textColor="#FFF"
        android:textStyle="bold"
        android:textSize="25sp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_room_professor"
        android:textColor="#FFF"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="10sp"
        />

    <Spinner
        android:id="@+id/professor_spinner"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="10sp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_room_sala"
        android:textColor="#FFF"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="10sp"
        />

    <Spinner
        android:id="@+id/sala_spinner"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="10sp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_room_date_1"
        android:textColor="#FFF"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="10sp"
        />

    <TextView
        android:layout_width="150sp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:layout_margin="10sp"
        android:text="@string/label_room_date_2"
        android:id="@+id/date_label"/>

    <Button
        android:layout_width="150sp"
        android:layout_height="wrap_content"
        android:text="@string/label_room_date"
        android:background="@drawable/button_shapes"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:textColor="#fff"
        android:inputType="datetime"
        android:onClick="mostraDatas"
        android:id="@+id/btnData"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_room_periodo"
        android:textColor="#FFF"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="10sp"
        />

    <Spinner
        android:id="@+id/periodo_spinner"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="10sp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_room_tipo"
        android:textColor="#FFF"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="10sp"
        />

    <Spinner
        android:id="@+id/tipo_spinner"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="10sp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_qnt_alunos"
        android:textColor="#FFF"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="10sp"
        />

    <EditText
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:layout_margin="15sp"
        android:padding="10sp"
        android:id="@+id/count"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/shapes"
        android:inputType="number"
        android:textColor="#ed145b"
        android:textSize="15sp"
        />

    <Button
        android:layout_width="150sp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20sp"
        android:background="@color/colorAccent"
        android:text="@string/btn_label_request_room"
        android:textColor="#FFF"
        android:textStyle="bold"
        android:textSize="20sp"
        android:onClick="requestRoom"
        />

</LinearLayout>